美多商城 ---用户浏览记录  更新前端文件

--- a/front_end_pc/index.html
+++ b/front_end_pc/index.html
@@ -111,6 +111,10 @@
         <div class="prev"></div>
         <div class="next"></div>
         <ul class="points">
+            <!-- <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li> -->
         </ul>
         <ul class="sub_menu">
             
